--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -2,5 +2,7 @@
   font-family: "Trebuchet MS";
   font-style: normal;
   font-weight: 400;
-  src: url("Exo2.0-Thin.otf") format("otf");
+  src:
+    local("Trebuchet MS"),
+    url("Exo2.0-Thin.otf") format("otf");
 }
